Bug 40937 - FILEOPEN: rtf doc crashing libreoffice
Summary: FILEOPEN: rtf doc crashing libreoffice
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.3 release
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-16 05:51 UTC by Paolo Benvenuto
Modified: 2012-03-19 13:33 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
document crashing libreoffice (463.38 KB, application/rtf)
2011-09-16 05:51 UTC, Paolo Benvenuto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Paolo Benvenuto 2011-09-16 05:51:44 UTC
Created attachment 51260 [details]
document crashing libreoffice

The attacched rtf document crashes libreoffice
Comment 1 Jean-Baptiste Faure 2011-10-22 03:23:15 UTC
I confirm the crash in LibreOffice 3.4.3 under Ubuntu 10.04 (x86_64) but not with the current master (further 3.5).

Best regards. JBF
Comment 2 Cor Nouws 2011-10-28 15:39:05 UTC
.
Comment 3 Paolo Benvenuto 2011-10-31 15:38:26 UTC
@Cor Nouws:

perhaps you wanted to write something more...
Comment 4 Cor Nouws 2011-11-01 00:54:28 UTC
@ paolo: no sorry, not at the moment.
Comment 5 Jean-Baptiste Faure 2011-12-11 12:38:20 UTC
No crash with libreoffice-3-5 branch (LibreOffice 3.5.0 
Version ID : 7b96bd7-7f15fca-1f1fd1a-ca8e46d-5bcbce4) under Ubuntu 10.04 x86_64 with FR langpack.

However, I get this error message in the terminal when I open the bugdoc:
../writerfilter/source/dmapper/GraphicImport.cxx:1505 failed. Message :GraphicCrop

There is two pictures in this file, one on them (the photo of this CV) is reduced to one pixel image like a webbug.

Miklos: I don't know if you are aware of this bug report which can interest you :-) Feel free to reassign if you can't handle it.

Best regards. JBF
Comment 6 Miklos Vajna 2011-12-11 12:50:58 UTC
Thanks, will try to have a look soon.
Comment 7 Miklos Vajna 2011-12-21 17:21:44 UTC
OK, the problem was that in case setting crop properties failed, dmapper didn't even try to set the image size.

Fixed in master: http://cgit.freedesktop.org/libreoffice/core/commit/?id=3c86591749aae36f997944d9c972d1c71b21bc7b

Also in -3-5: http://cgit.freedesktop.org/libreoffice/core/commit/?h=libreoffice-3-5&id=1c84402c87142f1f473c08dbac926a683f86f067
Comment 8 Jean-Baptiste Faure 2012-03-19 13:33:16 UTC
No crash confirmed in LO 3.5.1. Closing. Thank you.