fdo#40937 fix RTF import of images with invalid crop data

Add a try-catch, so in case setting crop data fails, the size data will
be still set.